# cruel_game_engine

./: Cargo.toml  README.md
models/boots/: tactical_boots_03.gltf
shaders/: fragment.glsl  vertex.glsl
src/: assets.rs  camera.rs  components.rs  data.rs  ecs.rs  game.rs  graphics.rs  gui.rs  handles.rs  level.rs  loader.rs  main.rs  material.rs  mesh.rs  new_structure.rs  opengl.rs  renderer.rs  resources.rs  scene_graph.rs  shaders.rs  textures.rs  viewport.rs  world.rs  world_new.rs
src/components/: mesh.rs  transform.rs  velocity.rs
