[package]
name = "cruel_game_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.23.1"
cgmath = "0.18.0"
clap = "4.5.40"
crossbeam-channel = "0.5.15"
egui = "0.31.1"
egui-winit = "0.31.1"
egui_glow = "0.31.1"
glow = "0.16.0"
gltf = "1.4.1"
glutin = "0.32.3"
image = "0.25.6"
rayon = "1.10.0"
shell-words = "1.1.0"
winit = "0.30.11"
